# NeuralFlash

./: LICENSE  README.md  Shadcn components list.txt  bun.lockb  package-lock.json  package.json  svelte.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: stores.ts
src/lib/components/: AIImportDialog.svelte  AddFlashcardDialog.svelte  AddSubjectDialog.svelte  EditFlashcardDialog.svelte  FlashcardForm.svelte  FlashcardGrid.svelte  FlashcardList.svelte  ImageDropper.svelte  SettingsSheet.svelte  Sidebar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/reader/: +page.svelte
